# uni2ascii

./: AUTHORS  CREDITS  ChangeLog  GetWord.c  Makefile.am  Makefile.in  NEWS  README  SetFormat.c  TODO  TestSuiteAscii2Uni  UTF8in.c  ascii2uni.1  ascii2uni.c  ascii2uni.py  config.h.in  configure  configure.ac  endian.c  endian.h  enttbl.c  enttbl.h  exitcode.h  formats.h  putu8.c  putu8.h  u2a.tcl  uni2ascii-4.14.lsm  uni2ascii-4.15.lsm  uni2ascii-4.16.lsm  uni2ascii-4.17.lsm  uni2ascii-4.18.lsm  uni2ascii.1  uni2ascii.c  uni2ascii.info  uni2html.py  unicode.h  utf8error.h
test/: test_0001.sh
